создание экранов транспорта

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AssistantDayr">
         <activity
+            android:name=".Transport.Activity.CartDescription"
+            android:exported="false" />
+        <activity
             android:name=".Transport.DescriptionActivityTransport"
             android:exported="false" />
         <activity
