исправлена ошибка recyclerview. создане экранов

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AssistantDayr">
         <activity
+            android:name=".transport.activity.ClassicMobileDescription"
+            android:exported="false" />
+        <activity
             android:name=".transport.activity.MotocycleDescription"
             android:exported="false" />
         <activity
@@ -22,7 +25,7 @@
             android:name=".settings.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".Survival.SurvivalListActivity"
+            android:name=".survival.SurvivalListActivity"
             android:exported="false" />
         <activity
             android:name=".transport.TransportListActivity"
