--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bara_x.assistantdayr">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -9,6 +8,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AssistantDayr">
+        <activity
+            android:name=".medicine.activity.PodoroznikDescription"
+            android:exported="false" />
+        <activity
+            android:name=".transport.activity.VazDescription"
+            android:exported="false" />
         <activity
             android:name=".medicine.activity.BintDescription"
             android:exported="false" />
