--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        agp_version = '8.1.0-rc01'
+        agp_version1 = '8.6.1'
+        agp_version2 = '8.6.1'
+        agp_version3 = '8.6.0'
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
+        classpath "com.android.tools.build:gradle:$agp_version3"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+ext {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+    targetCompatibility1 = JavaVersion.VERSION_11
 }
 
 task clean(type: Delete) {
